# carbon

./: Cargo.toml
carbon/: Cargo.toml  build.rs
carbon/src/: gateway.rs  input.rs  main.rs  message.rs
carbon/src/backend/: mod.rs  winit.rs
carbon/src/gateway/: client.rs  interface.rs  message.rs  mod.rs  registry.rs
carbon/src/protocol/: generated.rs  mod.rs  wayland.rs  xdg_shell.rs
protocol-scanner/: Cargo.toml
protocol-scanner/src/: emit.rs  lib.rs  main.rs
protocols/: wayland.xml
src/: gateway.rs  main.rs  message.rs
