[package]
name = "carbon"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.24", features = ["fs", "uio", "event"] }

log = "0.4"
env_logger = "0.9"
bytemuck = "1"
num_enum = "0.5"
slotmap = "1"
fixed = "1"
thiserror = "1"

winit = "0.26"

[build-dependencies]
protocol-scanner = { path = "../protocol-scanner" }
